# mechanix

./: Cargo.toml  LICENSE
src/: main.rs  singularity.rs
