[package]
name = "mechanix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.8"
tokio = {version="1.25.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.69"
regex = "1.7.1"
hyper = { version="0.14.24", features=["client"] }